force-app/main/default/objects/Facility__c/Facility__c.object-meta.xml
<CustomObject>
    <label>Facility</label>
    <nameField>
        <displayFormat>FC-{000000}</displayFormat>
        <label>FACILITY ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Facility</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>