force-app/main/default/objects/Facility__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>ACTIVE</label>
    <type>Checkbox</type>
</CustomField>