force-app/main/default/objects/Facility__c/fields/ChargeType__c.field-meta.xml
<CustomField>
    <fullName>ChargeType__c</fullName>
    <label>CHARGE TYPE</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ChargeType</valueSetName>
    </valueSet>
</CustomField>