force-app/main/default/objects/Facility__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>CITY(old)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BranchName</valueSetName>
    </valueSet>
</CustomField>