force-app/main/default/objects/Facility__c/fields/CityName__c.field-meta.xml
<CustomField>
    <fullName>CityName__c</fullName>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>