force-app/main/default/objects/Facility__c/fields/FacExternalID__c.field-meta.xml
<CustomField>
    <fullName>FacExternalID__c</fullName>
    <externalId>true</externalId>
    <label>FAC EXTERNAL ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>