force-app/main/default/objects/Facility__c/fields/FacilityImage__c.field-meta.xml
<CustomField>
    <fullName>FacilityImage__c</fullName>
    <label>FACILITY IMAGE</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>