force-app/main/default/objects/Facility__c/fields/FacilityMobilityType__c.field-meta.xml
<CustomField>
    <fullName>FacilityMobilityType__c</fullName>
    <label>FACILITY MOBILITY TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MobilityType</valueSetName>
    </valueSet>
</CustomField>