force-app/main/default/objects/Facility__c/fields/FacilityName__c.field-meta.xml
<CustomField>
    <fullName>FacilityName__c</fullName>
    <label>FACILITY NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>