force-app/main/default/objects/Facility__c/fields/FacilityQRLabel__c.field-meta.xml
<CustomField>
    <fullName>FacilityQRLabel__c</fullName>
    <formula>IMAGE(&apos;https://chart.googleapis.com/chart?chs=100x100&amp;cht=qr&amp;chl=&apos; + Name , &apos;Create Qr Code for this item&apos; )</formula>
    <label>FACILITY QR LABEL</label>
    <type>Text</type>
</CustomField>