force-app/main/default/objects/Facility__c/fields/FacilitySubType__c.field-meta.xml
<CustomField>
    <fullName>FacilitySubType__c</fullName>
    <label>Facility Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FacilityType__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>FacilitySubType</valueSetName>
    </valueSet>
</CustomField>