force-app/main/default/objects/Facility__c/fields/FacilityType__c.field-meta.xml
<CustomField>
    <fullName>FacilityType__c</fullName>
    <label>FACILITY TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FacilityType</valueSetName>
    </valueSet>
</CustomField>