force-app/main/default/objects/Facility__c/fields/ItemType__c.field-meta.xml
<CustomField>
    <fullName>ItemType__c</fullName>
    <label>ITEM TYPE</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ItemType</valueSetName>
    </valueSet>
</CustomField>