force-app/main/default/objects/Facility__c/fields/OwnerCompanyName__c.field-meta.xml
<CustomField>
    <fullName>OwnerCompanyName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OWNER COMPANY NAME</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>FACILITY</relationshipLabel>
    <relationshipName>FACILITY</relationshipName>
    <type>Lookup</type>
</CustomField>