force-app/main/default/objects/Facility__c/fields/OwnershipType__c.field-meta.xml
<CustomField>
    <fullName>OwnershipType__c</fullName>
    <label>OWNERSHIP TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OwnershipType</valueSetName>
    </valueSet>
</CustomField>