force-app/main/default/objects/Facility__c/fields/RollUpCurrentAvailableCapacityKG__c.field-meta.xml
<CustomField>
    <fullName>RollUpCurrentAvailableCapacityKG__c</fullName>
    <label>AVAILABLE CAPACITY(KG) EXCLUDE PLANNED</label>
    <summarizedField>LOCATOR__c.CurrentAvailableCapacityKG__c</summarizedField>
    <summaryFilterItems>
        <field>LOCATOR__c.LocationAreaType__c</field>
        <operation>equals</operation>
        <value>Storage Area</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>LOCATOR__c.LocatorLayer__c</field>
        <operation>equals</operation>
        <value>Floor Layer</value>
    </summaryFilterItems>
    <summaryForeignKey>LOCATOR__c.WarehouseID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>