force-app/main/default/objects/Facility__c/fields/RollUpMaxWeightKGCapacity__c.field-meta.xml
<CustomField>
    <fullName>RollUpMaxWeightKGCapacity__c</fullName>
    <label>MAX WEIGHT(KG) CAPACITY</label>
    <summarizedField>LOCATOR__c.CapacityKG__c</summarizedField>
    <summaryFilterItems>
        <field>LOCATOR__c.LocationAreaType__c</field>
        <operation>equals</operation>
        <value>Storage Area</value>
    </summaryFilterItems>
    <summaryForeignKey>LOCATOR__c.WarehouseID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>