force-app/main/default/objects/Facility__c/fields/StorageType__c.field-meta.xml
<CustomField>
    <fullName>StorageType__c</fullName>
    <label>STORAGE TYPE</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>StorageType</valueSetName>
    </valueSet>
</CustomField>