force-app/main/default/objects/Facility__c/fields/TemperatureFrom__c.field-meta.xml
<CustomField>
    <fullName>TemperatureFrom__c</fullName>
    <label>TEMPERATURE FROM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>