force-app/main/default/objects/Facility__c/fields/TemperatureTo__c.field-meta.xml
<CustomField>
    <fullName>TemperatureTo__c</fullName>
    <label>TEMPERATURE TO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>