force-app/main/default/objects/Facility__c/fields/TotalSquareMeter__c.field-meta.xml
<CustomField>
    <fullName>TotalSquareMeter__c</fullName>
    <label>TOTAL SQUARE METER(m2)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>