force-app/main/default/objects/Facility__c/fields/WarehoueType__c.field-meta.xml
<CustomField>
    <fullName>WarehoueType__c</fullName>
    <label>WAREHOUSE TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WarehoueType</valueSetName>
    </valueSet>
</CustomField>