force-app/main/default/objects/Facility__c/fields/ZipPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ZipPostalCode__c</fullName>
    <label>Zip/Postal Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>