force-app/main/default/objects/Facility__c/recordTypes/ClimateControlledWarehouse.recordType-meta.xml
<RecordType>
    <fullName>ClimateControlledWarehouse</fullName>
    <active>true</active>
    <label>CLIMATE-CONTROLLED WAREHOUSE</label>
</RecordType>