force-app/main/default/objects/Facility__c/recordTypes/NormalWarehouse.recordType-meta.xml
<RecordType>
    <fullName>NormalWarehouse</fullName>
    <active>true</active>
    <description>Normal temperature warehouse</description>
    <label>NORMAL WAREHOUSE</label>
</RecordType>