force-app/main/default/objects/Facility__c/recordTypes/PortTerminal.recordType-meta.xml
<RecordType>
    <fullName>PortTerminal</fullName>
    <active>true</active>
    <label>Port/Terminal</label>
</RecordType>