force-app/main/default/objects/Facility__c/recordTypes/YardICD.recordType-meta.xml
<RecordType>
    <fullName>YardICD</fullName>
    <active>true</active>
    <label>Yard/ICD</label>
</RecordType>